# FusionCAT

./: README.md  build_docs.bat  pyproject.toml
docs/: conf.py
docs/_build/: .buildinfo  api.html  genindex.html  index.html  objects.inv  physics_particle_balance.html  py-modindex.html  search.html  searchindex.js
docs/_build/.doctrees/: api.doctree  environment.pickle  index.doctree  physics_particle_balance.doctree
docs/_build/.doctrees/api/: core.doctree  (+3 more)
docs/_build/_modules/: index.html
docs/_build/_sources/: index.rst.txt
docs/_build/api/: core.html  index.html  physics.html  utils.html
docs/_build/guide/: index.html  installation.html  quickstart.html
docs/_build/physics/: index.html  particle_balance.html  power_balance.html
docs/api/: core.rst  index.rst
docs/guide/: installation.rst
docs/physics/: index.rst  particle_balance.rst
examples/: full_phase1_analysis.py  phase2_sensitivity_analysis.py  phase3_1d_analysis.py  quickstart.py
fusioncat/: __init__.py  core.py  plotting.py
fusioncat.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
fusioncat/analysis/: __init__.py  scanner.py
fusioncat/physics/: __init__.py  catalyzed_dd.py  fusion.py  lawson.py  numerics.py  particles.py  radiation.py
fusioncat/profiles/: __init__.py  shapes.py
fusioncat/solvers/: __init__.py  one_d.py
fusioncat/utils/: __init__.py  exceptions.py  fuels.py  results.py
tests/: test_core_2t.py  test_dd_catalyzed_cycle.py  test_library.py  test_one_d.py  test_physics_2t.py  test_physics_and_core.py
tests/physics/: test_particles.py
(+47 files in other folders)
