[project]
name = "fusioncat"
version = "0.4.0"
description = "A toolkit for 0D/1D analysis of fusion concepts with a self-reliant physics core."
authors = [{ name = "FusionCAT Development Team" }]
requires-python = ">=3.9"
dependencies = [
    "plasmapy",
    "astropy",
    "numpy",
    "scipy",
    "matplotlib",
    "numba",
    "pytest"
] 